2-16-features/bel/smiley2.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: smiley2
  namespace: faces
spec:
  type: ClusterIP
  selector:
    service: smiley2
  ports:
  - port: 80
    targetPort: http
