2-16-features/bel/color-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: color-center
  namespace: faces
spec:
  parentRefs:
  - group: core
    kind: Service
    name: color
    port: 80
  rules:
  - matches:
      - path:
          type: PathPrefix
          value: "/center"
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: color-edge
  namespace: faces
spec:
  parentRefs:
  - group: core
    kind: Service
    name: color
    port: 80
  rules:
  - matches:
      - path:
          type: PathPrefix
          value: "/edge"
