2-16-features/bel/emoji-route.yaml
---
kind: GRPCRoute
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: emoji-listall-route
  namespace: emojivoto
spec:
  parentRefs:
    - name: emoji-svc
      kind: Service
      group: core
      port: 8080
  rules:
    - matches:
        - method:
            type: Exact
            service: emojivoto.v1.EmojiService
            method: ListAll
---
kind: GRPCRoute
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: emoji-find-route
  namespace: emojivoto
spec:
  parentRefs:
    - name: emoji-svc
      kind: Service
      group: core
      port: 8080
  rules:
    - matches:
        - method:
            type: Exact
            service: emojivoto.v1.EmojiService
            method: FindByShortcode
