2-16-features/bel/smiley-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: smiley-center
  namespace: faces
spec:
  parentRefs:
  - group: core
    kind: Service
    name: smiley
    port: 80
  rules:
  - matches:
      - path:
          type: PathPrefix
          value: "/center"
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: smiley-edge
  namespace: faces
spec:
  parentRefs:
  - group: core
    kind: Service
    name: smiley
    port: 80
  rules:
  - matches:
      - path:
          type: PathPrefix
          value: "/edge"
    backendRefs:
      - group: core
        kind: Service
        name: smiley2
        port: 80
